--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "node": ">=0.10"
   },
   "bin": {
-    "anyfetch-file-watcher": "filewatcher.js"
+    "anyfetch-file-watcher": "anyfetch-file-watcher"
   },
   "directories": {
     "test": "test"
