--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "anyfetch": ">=0.2.24",
     "async": "0.9.x",
+    "read": "^1.0.5",
     "watch": "^0.10.0"
   },
   "devDependencies": {
