--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "file-watcher"
   ],
   "dependencies": {
-    "anyfetch": ">=0.2.24",
+    "anyfetch": "^0.2.24",
     "async": "0.9.x",
     "read": "^1.0.5",
     "watch": "^0.10.0"
