--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "anyfetch": "^2.0.0",
     "async": "0.9.x",
+    "node-zip": "^1.1.0",
     "read": "^1.0.5",
     "watch": "^0.11.0"
   },
